# end-to-end-drug-discovery-platform

./: README.md  config_example.yaml  pyproject.toml  requirements.txt
dd_prep/: __init__.py  cli.py  config.py  pipeline.py
dd_prep/steps/: base  filter_step.py  fingerprint_step.py  flipper_step.py  omega_step.py  organize_step.py  split_step.py  tautomer_step.py
dd_prep/utils/: __init__.py  file_utils.py  logging_utils.py  parallel.py
slurm/: 00_setup_env.sh  01_filter_split.sh  02_flipper.sh  03_tautomers.sh  04_organize_fp.sh  05_omega.sh  coordinator.sh  setup_cluster.sh  status.sh  submit_pipeline.sh
